<resources>
    <string name="app_name">MadarTask</string>
    <string name="empty_field_error_message">Please fill this field</string>
    <string name="name_length_error_message">Please insert a valid name</string>
    <string name="job_title_length_error_message">Please enter a valid job title</string>
    <string name="name_length_error_message_1">Name must contains maximum 20 characters</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter name</string>
    <string name="job_title_hint">Enter job title</string>
    <string name="job_title_label">Job title</string>
    <string name="age_hint">Enter age</string>
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="show_users">Show Users</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="user_added_successfully">User has been added successfully</string>
    <string name="one_year">%1$d year old</string>
    <string name="more_than_one_year">%1$d years old</string>
    <string name="empty_list_text">No user found</string>
    <string name="age_length_error_message">Please enter a valid age</string>
    <string name="add_user_failure_message">Faild you add this user</string>
    <string name="users_header">Users</string>
</resources>